OnlineStoreMVC/Content/css/tmmegamenu.css
.top_menu {
    padding: 0 15px 0;
    clear: both;
    float: none;
}

@media (max-width: 767px) {
    .top_menu {
        margin-top: 30px;
    }
}

.stickUpTop {
    position: relative;
    width: 100%;
    left: 0;
    top: 0;
    z-index: 1;
}

@media (min-width: 768px) {
    .stickUpTop.isStuck .menu {
        -moz-box-shadow: 0 14px 15px -18px rgba(0,0,0,0.13);
        -webkit-box-shadow: 0 14px 15px -18px rgba(0,0,0,0.13);
        box-shadow: 0 14px 15px -18px rgba(0,0,0,0.13);
    }
}

@media (min-width: 1200px) {
    .stickUpTop.isStuck .stickUpHolder {
        padding: 0 30px;
    }
}

.stickUpHolder {
    padding: 0;
}

@media (max-width: 1199px) {
    .stickUpHolder {
        max-width: 100%;
    }
}

@media only screen and (max-width: 1199px) {
    .isStuck .container {
        padding-left: 15px;
        padding-right: 15px;
    }
}

.top_menu > ul, .top_menu .stickUpHolder > ul {
    padding: 0;
    position: relative;
    background: #f7f9fb;
    margin-bottom: 0;
}

@media (max-width: 767px) {
    .top_menu > ul, .top_menu .stickUpHolder > ul {
        border: none;
    }
}

.top_menu > ul > li, .top_menu .stickUpHolder > ul > li {
    display: inline-block;
    padding: 19px 0 22px;
}

@media (max-width: 991px) {
    .top_menu > ul > li, .top_menu .stickUpHolder > ul > li {
        padding: 13px 0 14px;
    }
}

@media (max-width: 767px) {
    .top_menu > ul > li, .top_menu .stickUpHolder > ul > li {
        padding: 0;
    }
}

.top_menu > ul > li:first-child a, .top_menu .stickUpHolder > ul > li:first-child a {
    border: none;
}
.top_menu .dropbtn {
    background: #f7f9fb;
    color: #526a7c;
    padding-left: 12px;
    font: 800 14px/32px "Open Sans",sans-serif;
    border: none;
    cursor: pointer;
    text-transform: uppercase;
}

.top_menu .dropdown {
    position: relative;
    display: inline-block;
}

.top_menu .dropdown-content {
    display: none;
    position: absolute;
    background: #f7f9fb;
    min-width: 239px;
    box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.2);

}

.top_menu .dropdown-content a {
    color: #526a7c;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

.top_menu .dropdown-content a:hover {
    background-color: #f1f1f1;
    color: #960247;
}

.top_menu .dropdown:hover .dropdown-content {
    display: block;
    color: #960247;
}

.top_menu .dropdown:hover .dropbtn {
    color: #960247;
}
.top_menu > ul > li > a, .top_menu .stickUpHolder > ul > li > a {
    -moz-transition: all 0.3s ease;
    -o-transition: all 0.3s ease;
    -webkit-transition: all 0.3s ease;
    transition: all 0.3s ease;
    font: 800 16px/32px "Open Sans",sans-serif;
    display: block;
    padding: 0 20px;
    border-left: 0;
    color: #526a7c;
    border-left: 1px solid #e0e7ed;
    text-transform: uppercase;
    font-size:15px;
}

@media (max-width: 1199px) {
    .top_menu > ul > li > a, .top_menu .stickUpHolder > ul > li > a {
        font-size: 12px;
        padding: 0 15px;
    }
}

@media (max-width: 991px) {
    .top_menu > ul > li > a, .top_menu .stickUpHolder > ul > li > a {
        font-size: 11px;
        padding: 0 10px;
        text-transform: none;
    }
}

.top_menu > ul > li > a.sf-with-ul, .top_menu .stickUpHolder > ul > li > a.sf-with-ul {
    padding-right: 43px;
}

    .top_menu > ul > li > a.sf-with-ul:after, .top_menu .stickUpHolder > ul > li > a.sf-with-ul:after {
        position: absolute;
        right: 15px;
        top: 21%;
        content: "\e313";
        font-family: "material-icons";
        font-size: 21px;
        line-height: 21px;
    }

@media (max-width: 991px) {
    .top_menu > ul > li > a.sf-with-ul:after, .top_menu .stickUpHolder > ul > li > a.sf-with-ul:after {
        top: 25%;
        right: 12px;
        font-size: 19px;
        line-height: 19px;
    }
}

.top_menu > ul > li > a.sf-with-ul:before, .top_menu .stickUpHolder > ul > li > a.sf-with-ul:before {
    -moz-transition: all 0.3s ease 0.8s;
    -o-transition: all 0.3s ease 0.8s;
    -webkit-transition: all 0.3s ease;
    -webkit-transition-delay: 0.8s;
    transition: all 0.3s ease 0.8s;
    content: "";
    position: absolute;
    left: 50%;
    -moz-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    -webkit-transform: translateX(-50%);
    transform: translateX(-50%);
    bottom: -22px;
    width: 0;
    height: 0;
    border-left: 11px solid transparent;
    border-right: 11px solid transparent;
    border-bottom: 10px solid #fff;
    z-index: 1;
    opacity: 0;
}

@media (max-width: 991px) {
    .top_menu > ul > li > a.sf-with-ul:before, .top_menu .stickUpHolder > ul > li > a.sf-with-ul:before {
        bottom: -15px;
    }
}

@media (max-width: 991px) {
    .top_menu > ul > li > a.sf-with-ul, .top_menu .stickUpHolder > ul > li > a.sf-with-ul {
        padding-right: 36px;
    }
}

@media (max-width: 767px) {
    .top_menu > ul > li > a, .top_menu .stickUpHolder > ul > li > a {
        text-align: left;
        padding: 15px 25px;
        color: #526a7c;
        font: 500 16px/20px "Ubuntu",sans-serif;
        border: none;
        border-top: 1px solid #ccc;
        margin: 0;
    }
}

.top_menu > ul > li > a:hover, .top_menu .stickUpHolder > ul > li > a:hover {
    color: #630a34;
}

    .top_menu > ul > li > a:hover:before, .top_menu .stickUpHolder > ul > li > a:hover:before {
        -moz-transition: all 0.3s ease 0.35s;
        -o-transition: all 0.3s ease 0.35s;
        -webkit-transition: all 0.3s ease;
        -webkit-transition-delay: 0.35s;
        transition: all 0.3s ease 0.35s;
        opacity: 1;
    }

.top_menu > ul > li.sfHover > a, .top_menu > ul > li.sfHoverForce > a, .top_menu .stickUpHolder > ul > li.sfHover > a, .top_menu .stickUpHolder > ul > li.sfHoverForce > a {
    color: #630a34;
}
/* ... */

